--- a/roles/gcp_create_template_vm/tasks/main.yml
+++ b/roles/gcp_create_template_vm/tasks/main.yml
@@ -1,2 +1,3 @@
 ---
-# tasks file for roles/gcp_create_template_vm
+- name: "Create a virtual machine template"
+  import_tasks: "01_create_template_vm.yml"
