Added new role for creating new instance group

--- a/playbooks/gcp_create_template.yml
+++ b/playbooks/gcp_create_template.yml
@@ -1,5 +1,5 @@
 ---
 - name: "Create a virtual machine template"
-  hosts: localhost
+  hosts: local
   roles: 
   - role: "roles/gcp_create_template_vm"
